[package]
name = "dup-cli"
version = "0.1.6"
edition = "2021"
authors = ["D. Doffy <cuongnsm@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to upload multiple files to a server, support tracking progress"
readme = "README.md"
homepage = "https://github.com/ddoffy/dup-cli"
repository = "https://github.com/ddoffy/dup-cli"
keywords = ["cli", "upload", "file", "dup"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.12.12", features = ["multipart", "blocking", "stream", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
clap = { version = "4.5.30", features = ["derive"] }
indicatif = "0.17.11"
tokio-util = "0.7.13"
futures-util = "0.3.31"
bytes = "1.10.0"
serde_json = "1.0.139"
base64 = "0.22.1"
